--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
             </div>
         </div>
         <div class="footer__two">
-            <h1>Udmey</h1>
+            <h1>Udemy</h1>
             <p>&copy;Udemy,INC.</p>
         </div>
 
