--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <!--categories -->
     <div class="categories">
         <p>Development</p>
-        <p>busniess</p>
+        <p>Business</p>
         <p>IT & Software</p>
         <p>Desgin</p>
         <p>Marketing</p>
@@ -149,7 +149,7 @@
             </div>
             <div class="Courses-card">
                 <img src="./images/c5.jpg">
-                <h3>2025 Python Backend Development </h3>
+                <h3>2025 Python Development </h3>
                 <p>Agnel John</p>
                 <p>4.5⭐⭐⭐⭐</p>
                 <p>449 <del>999</del></p>
@@ -183,7 +183,7 @@
     <div class="footer">
         <div class="footer__one">
             <div class="footer__one__s1">
-                <p>Udemy Busniess</p>
+                <p>Udemy Business</p>
                 <p>Teach on Udemy</p>
                 <p>Get the App</p>
                 <p>About Us</p>
