--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <p>Development</p>
         <p>Business</p>
         <p>IT & Software</p>
-        <p>Desgin</p>
+        <p>Design</p>
         <p>Marketing</p>
     </div>
     <!--learning Image-->
